<resources>
    <string name="app_name">Profile Hub</string>

    <!--    auth -->
    <string name="tv_lets_get_acquainted">Let\'s get acquainted</string>
    <string name="tv_fill_out_the_profile">Fill out the profile and go to the application!</string>
    <string name="check_box_remember_me">Remember me</string>
    <string name="tv_terms_and_conditions">By clicking Register you agree to our Terms \nand Conditions</string>
    <string name="tv_already_have_an_account">Already have an account?</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="tv_or">or</string>
    <string name="btn_google">Google</string>
    <string name="btn_register">Register</string>
    <string name="text_input_layout_hint_e_mail">E-mail</string>
    <string name="text_input_layout_hint_password">Password</string>

    <!--    validation -->
    <string name="e_mail_address_can_t_be_blank">E-Mail address can\'t be blank</string>
    <string name="incorrect_e_mail_address">Incorrect E-Mail address</string>

    <string name="password_must_not_be_blank">Password must not be blank</string>
    <string name="password_must_include_a_minimum_characters">Your password must include a minimum of %1$d characters</string>
    <string name="password_need_to_contain_at_least_one_letter">Your password need to contain at least one letter</string>
    <string name="password_must_contain_at_least_one_digit">Password must contain at least one digit</string>
    <string name="password_must_contain_only_english_letters_and_digits">Your password must contain only English letters and digits</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Your password must contain at least one uppercase letter</string>
    <string name="password_must_not_contain_spaces">Your password must not contain spaces</string>

    <string name="name_must_not_be_blank">Name must not be blank</string>
    <string name="incorrect_name">Incorrect name</string>

    <string name="career_must_not_be_blank">Career must not be blank</string>
    <string name="career_must_include_a_minimum_characters">Your career must include a minimum of %1$d characters</string>


    <!-- main -->
    <string name="btn_log_out">Log out</string>
    <string name="iv_photo_profile">Photo profile</string>
    <string name="tv_settings">Settings</string>
    <string name="iv_facebook_icon">Facebook icon</string>
    <string name="iv_linkedin_icon">Linkedin icon</string>
    <string name="iv_instagram_icon">Instagram icon</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="btn_view_my_contacts">View my contacts</string>

    <!-- contacts   -->
    <string name="tv_contacts">Contacts</string>
    <string name="iv_arrow_back_icon">Arrow back icon</string>
    <string name="iv_search_icon">Search icon</string>
    <string name="tv_add_contacts">Add contacts</string>


    <!--    dialog fragment add contact -->
    <string name="text_input_layout_hint_name">Name</string>
    <string name="text_input_layout_hint_career">Career</string>
    <string name="iv_add_photo_profile">Add photo profile</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>


    <string name="contact_saved_success">Contact saved success</string>
    <string name="contact_does_not_save">Contact doesn\'t save</string>
    <string name="contact_undo_deleted">Contact was deleted success</string>
    <string name="contact_not_deleted">Contact wasn\'t deleted</string>
    <string name="contact_undo">Undo</string>
</resources>