<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".AuthActivity">

    <TextView
        android:id="@+id/authTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_lets_get_acquainted"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/authSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/authSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/tv_fill_out_the_profile"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_small"
        android:hint="@string/text_input_layout_hint_email"
        android:textColorHint="@color/secondary_text_color"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_small"
        android:layout_marginTop="24dp"
        android:hint="@string/text_input_layout_password"
        android:textColorHint="@color/secondary_text_color"
        app:layout_constraintBottom_toTopOf="@id/checkBoxRememberMe"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:inputType="textPassword"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_small"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/light_border_color"
        android:text="@string/check_box_remember_me"
        android:textColor="@color/secondary_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_small"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_primary_color"
        android:drawableStart="@drawable/google_icon"
        android:gravity="center"
        android:text="@string/btn_google"
        app:layout_constraintBottom_toTopOf="@id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_or"
        android:textColor="@color/primary_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_small"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bordered_button_transparent_orange"
        android:text="@string/btn_register"
        android:textColor="@color/primary_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvTermsAndConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTermsAndConditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:breakStrategy="simple"
        android:gravity="center"
        android:minLines="2"
        android:text="@string/tv_terms_and_conditions"
        android:textColor="@color/secondary_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tvAlreadyHaveAnAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/tvAlreadyHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_horizontal_small"
        android:text="@string/tv_already_have_an_account"
        android:textColor="@color/secondary_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:clickable="true"
        android:text="@string/tv_sign_in"
        android:textColor="@color/primary_text_color"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvAlreadyHaveAnAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvAlreadyHaveAnAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>